# emulsion

./: .gitignore  AGENTS.md  BUILD  CLAUDE.md  Cargo.toml  MODULE.bazel  README.md  prd.md  run.bat  run.sh  setup-guide.md
.claude/: memory.md
apps/ios/: BUILD  Info.plist  README.md
apps/ios/PortfolioApp.xcodeproj/: project.pbxproj
apps/ios/PortfolioApp.xcodeproj/xcshareddata/xcschemes/: PortfolioApp.xcscheme
apps/ios/PortfolioApp.xcodeproj/xcuserdata/richardlao.xcuserdatad/xcschemes/: xcschememanagement.plist
apps/ios/Sources/: PortfolioApp.swift
apps/ios/Sources/APIClient/: APIClient.swift  APIError.swift
apps/ios/Sources/Models/: Models.swift
apps/ios/Sources/Theme/: EmulsionTheme.swift  GrainOverlay.swift  LapseTheme.swift  PolaroidCard.swift
apps/ios/Sources/ViewModels/: AppState.swift  AskViewModel.swift  InboxViewModel.swift  LeaveNoteViewModel.swift  PortfolioViewModel.swift  ProjectDetailViewModel.swift  ProjectsViewModel.swift
apps/ios/Sources/Views/: AskView.swift  ContentView.swift  ConversationThreadView.swift  InboxView.swift  LeaveNoteView.swift  MainTabView.swift  PlaceholderPortfolioView.swift  PortfolioHomeView.swift  ProjectDetailView.swift  ProjectsListView.swift  RootPagerView.swift  TLDRCardView.swift
apps/ios/Sources/Views/Components/: ExperienceCardView.swift  HeroView.swift  RemoteImage.swift  SectionHeaderView.swift  ShowcaseSection.swift  SkillsCardView.swift
apps/ios/Tests/PortfolioAppTests/: APIClientTests.swift  AskViewModelTests.swift  InboxViewModelTests.swift  LeaveNoteViewModelTests.swift  MockAPIClient.swift  ModelTests.swift  ViewModelTests.swift
docs/: interview-guide.md  retrospective.md  system-design.md  test-plan.md
docs/superpowers/plans/: 2026-04-28-portfolio-app.md  2026-04-29-global-claude-md-redesign.md
docs/superpowers/specs/: 2026-04-28-improvement-plan.md  2026-04-28-portfolio-design-v2.md  2026-04-28-portfolio-design.md  2026-04-29-global-claude-md-redesign.md
scripts/: benchmark.sh
services/portfolio-api/: BUILD  Cargo.toml  README.md
services/portfolio-api/migrations/: 0001_initial.sql  0002_portfolio_counters.sql  0003_indexes.sql  0004_ama_unique.sql  0005_fts5_qa.sql  0006_conversation_theatre.sql
services/portfolio-api/src/: app_state.rs  cache.rs  db.rs  error.rs  main.rs  test_utils.rs
services/portfolio-api/src/handlers/: conversations_handler.rs  health_handler.rs  mod.rs  notes_handler.rs  portfolio_handler.rs  projects_handler.rs  qa_handler.rs
services/portfolio-api/src/models/: conversation.rs  experience.rs  message.rs  mod.rs  note.rs  portfolio.rs  project.rs  qa_pair.rs  skill.rs
services/portfolio-api/src/repositories/: conversations_repo.rs  experience_repo.rs  mod.rs  notes_repo.rs  portfolio_repo.rs  projects_repo.rs  qa_repo.rs  skills_repo.rs
services/portfolio-api/src/routes/: mod.rs  tests.rs
shared/emulsion-types/: BUILD  Cargo.toml  build.rs  generate-bindings.sh
shared/emulsion-types/src/: emulsion_types.udl  lib.rs
shared/schemas/: README.md
tasks/: state.json
tools/seed/: BUILD  Cargo.toml  README.md
tools/seed/data/: cv.json  cv_template.json
tools/seed/src/: main.rs
