module(
    name = "emulsion",
    version = "0.0.1",
)

bazel_dep(name = "rules_rust", version = "0.70.0")
bazel_dep(name = "rules_apple", version = "4.5.3")
bazel_dep(name = "rules_swift", version = "3.6.1")
bazel_dep(name = "apple_support", version = "2.5.4")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021")
use_repo(rust, "rust_toolchains")
register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//services/portfolio-api:Cargo.toml",
        "//shared/emulsion-types:Cargo.toml",
        "//tools/seed:Cargo.toml",
    ],
)
use_repo(crate, "crates")
